Implemeting boardCommand and showAllMembersCommand.